[tool.poetry]
name = "klinok9_brain_games"
version = "1"
description = "test"
authors = ["Your Name <you@example.com>"]
license = "mit"
packages = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.8"
[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
